<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/white_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="750dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="701dp"
        android:contentDescription="useless bar"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/line" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font"
        android:text="@string/task_title"
        android:textColor="@color/white"
        android:textSize="50dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/white_bar"
        app:layout_constraintStart_toStartOf="@id/white_bar" />


    <TextView
        android:id="@+id/task_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/white_bar"
        app:layout_constraintStart_toStartOf="@id/white_bar"
        android:text="@string/later"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/font"
        android:textColor="@color/white"
        android:textSize="20dp"/>


    <TextView
        android:id="@+id/minus"
        android:background="@drawable/minus"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/orange_light"
        android:textSize="15dp"
        android:fontFamily="@font/font"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/incad"
        app:layout_constraintBottom_toBottomOf="@id/incad"
        app:layout_constraintEnd_toStartOf="@id/incad"/>

    <TextView
        android:id="@+id/incad"
        android:layout_width="80dp"
        android:layout_marginTop="10dp"
        android:layout_height="80dp"
        android:text="15"
        android:textColor="@color/white"
        android:textSize="50dp"
        android:fontFamily="@font/font"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/task_name"
        app:layout_constraintStart_toStartOf="@id/white_bar"
        app:layout_constraintEnd_toEndOf="@id/white_bar"/>

    <TextView
        android:id="@+id/mintxt"
        android:layout_width="100dp"
        android:layout_marginTop="10dp"
        android:layout_height="40dp"
        android:text="@string/min"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:fontFamily="@font/font"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/minus"
        app:layout_constraintStart_toStartOf="@id/white_bar"
        app:layout_constraintEnd_toEndOf="@id/white_bar"/>

    <TextView
        android:id="@+id/add"
        android:background="@drawable/add"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:textColor="@color/orange_light"
        android:textSize="15dp"
        android:fontFamily="@font/font"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toTopOf="@id/incad"
        app:layout_constraintBottom_toBottomOf="@id/incad"
        app:layout_constraintStart_toEndOf="@id/incad" />

    <ImageView
        android:id="@+id/startbtn"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/font"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mintxt"
        app:srcCompat="@drawable/background" />

    <TextView
        android:id="@+id/start_text"
        android:layout_width="90dp"
        android:layout_height="24dp"
        android:fontFamily="@font/font"
        android:text="@string/start"
        android:textAlignment="center"
        android:textColor="@color/orange_light"
        android:textSize="20dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/startbtn"
        app:layout_constraintEnd_toEndOf="@id/startbtn"
        app:layout_constraintStart_toStartOf="@id/startbtn"
        app:layout_constraintTop_toTopOf="@id/startbtn" />


    <ImageView
        android:id="@+id/white_bar_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="useless bar"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/startbtn"
        app:layout_constraintEnd_toEndOf="@id/white_bar"
        app:layout_constraintStart_toStartOf="@id/white_bar"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/line" />


    <ImageView
        android:id="@+id/button"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/font"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/white_bar_2"
        app:srcCompat="@drawable/background" />

    <TextView
        android:id="@+id/button_text"
        android:layout_width="90dp"
        android:layout_height="24dp"
        android:fontFamily="@font/font"
        android:text="@string/end"
        android:textAlignment="center"
        android:textColor="@color/orange_light"
        android:textSize="20dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/button"
        app:layout_constraintEnd_toEndOf="@id/button"
        app:layout_constraintStart_toStartOf="@id/button"
        app:layout_constraintTop_toTopOf="@id/button" />
</androidx.constraintlayout.widget.ConstraintLayout>