<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/white_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="701dp"
        android:contentDescription="useless bar"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/line" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font"
        android:text="@string/home_title"
        android:textColor="@color/white"
        android:textSize="50dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/white_bar"
        app:layout_constraintStart_toStartOf="@id/white_bar" />

    <EditText
        android:id="@+id/input"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@+id/white_bar"
        app:layout_constraintEnd_toEndOf="@id/white_bar"
        app:layout_constraintStart_toStartOf="@id/white_bar"
        android:layout_marginTop="10dp"
        android:hint="@string/input"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textSize="20dp"
        android:maxLength="20"
        android:textColor="@color/orange_light"
        android:background="@drawable/background"
        android:fontFamily="@font/font"
        android:textColorHint="@color/orange_light"
        android:singleLine="true" />

    <ImageView
        android:id="@+id/white_bar_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="useless bar"
        android:visibility="visible"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@id/white_bar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/white_bar"
        app:layout_constraintTop_toBottomOf="@id/input"
        app:srcCompat="@drawable/line" />

    <ImageView
        android:id="@+id/button_about"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@id/white_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/info" />

    <ImageView
        android:id="@+id/button"
        android:layout_width="85dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/font"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/white_bar_4"
        app:srcCompat="@drawable/background" />

    <TextView
        android:id="@+id/button_text"
        android:layout_width="85dp"
        android:layout_height="24dp"
        android:fontFamily="@font/font"
        android:text="@string/start"
        android:textAlignment="center"
        android:textColor="@color/orange_light"
        android:textSize="20dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/button"
        app:layout_constraintEnd_toEndOf="@id/button"
        app:layout_constraintStart_toStartOf="@id/button"
        app:layout_constraintTop_toTopOf="@id/button" />



    <EditText
        android:id="@+id/list"
        android:layout_width="0dp"
        android:layout_height="130dp"
        app:layout_constraintTop_toBottomOf="@+id/white_bar_2"
        app:layout_constraintEnd_toEndOf="@id/white_bar"
        app:layout_constraintStart_toStartOf="@id/white_bar"
        android:layout_marginTop="10dp"
        android:hint="@string/list"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textSize="20dp"
        android:maxLength="84"
        android:textColor="@color/orange_light"
        android:background="@drawable/background"
        android:fontFamily="@font/font"
        android:textColorHint="@color/orange_light" />

    <ImageView
        android:id="@+id/white_bar_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="useless bar"
        android:visibility="visible"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@id/white_bar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/white_bar"
        app:layout_constraintTop_toBottomOf="@id/list"
        app:srcCompat="@drawable/line" />


</androidx.constraintlayout.widget.ConstraintLayout>